opam-version: "1.2"
maintainer: "Oliver Gu <gu.oliver@yahoo.com>"
authors: [ "Oliver Gu <gu.oliver@yahoo.com>" ]
homepage: "https://bitbucket.org/ogu/ibx"
bug-reports: "https://bitbucket.org/ogu/ibx/issues"
dev-repo: "https://bitbucket.org/ogu/ibx.git"
license: "LGPL-2.1+ with OCaml linking exception"
build: [
  ["jbuilder" "build" "--only-packages" "ibx" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "core"
  "jbuilder"                {build & >= "1.0+beta2"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
OCaml implementation of the Interactive Brokers TWS API

IBX is a pure OCaml implementation of the Interactive Brokers Trader
Workstation API (TWS API) built on top of Jane Street's Core and Async
library.
"
