opam-version: "2.0"
maintainer: "Oliver Gu <gu.oliver@yahoo.com>"
authors: [ "Oliver Gu <gu.oliver@yahoo.com>" ]
homepage: "https://bitbucket.org/ogu/ibx"
bug-reports: "https://bitbucket.org/ogu/ibx/issues"
dev-repo: "git+https://bitbucket.org/ogu/ibx.git"
license: [ "OCaml-LGPL-linking-exception" ]
build: [
  ["dune" "build" "--only-packages" "ibx" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "core"
  "dune"                {build}
  "textutils"
  "ppx_deriving"
  "ppx_sexp_conv"
]
descr: "
OCaml implementation of the Interactive Brokers TWS API

IBX is a pure OCaml implementation of the Interactive Brokers Trader
Workstation API (TWS API) built on top of Jane Street's Core and Async
library.
"
